--- a/report/configurations/configuration.tex
+++ b/report/configurations/configuration.tex
@@ -2,6 +2,7 @@
 
 \renewcommand{\contentsname}{\tocTitle}
 \renewcommand{\chaptername}{\chapterPrefix}
+\renewcommand{\appendixname}{}
 
 % Set the chapter title formatting
 % \AtBeginDocument{\renewcommand{\bibsection}{\chapter{\bibname}}}
