--- a/report/distributed_gan.tex
+++ b/report/distributed_gan.tex
@@ -2,7 +2,7 @@
 \documentclass[english,11pt]{report}
 
 % PACKAGES
-\usepackage[symbol,hang,perpage]{footmisc} % for footnotes
+\usepackage[bottom,hang,perpage]{footmisc} % for footnotes
 \usepackage{lmodern} % for font
 \usepackage{graphicx} % for pdf, bitmapped graphics files
 \usepackage{hyperref} % for hyperlinks
