--- a/report/sections/abstract.tex
+++ b/report/sections/abstract.tex
@@ -1,2 +1,2 @@
 \chapter{Abstract}
-With the rise of deep learning, generative adversarial networks (GANs) have become a popular method for generating synthetic data. However, training GANs is challenging, especially with large and privacy-sensitive datasets. This work extends the "MD-GAN: Multi-Discriminator Generative Adversarial Networks for Distributed Datasets" \cite{mdgan} by providing an open-source implementation that operates over networked environments and enhances privacy by keeping data local. We further evaluate our approach on Non-IID data distributions, demonstrating its effectiveness in realistic scenarios. This research was developed for the "Distributed Deep Learning" course at the University of Neuchâtel.
+With the rise of deep learning, Generative Adversarial Networks (GANs) have become a popular method for generating synthetic data. However, training GANs is challenging, particularly when dealing with large and privacy-sensitive datasets. This work provides an extensive analysis of training GANs in a distributed setting, presenting an open-source implementation that operates over networked environments while enhancing privacy by keeping data local. This research was developed for the "Distributed Deep Learning" course at the University of Neuchâtel.
