--- a/report/sections/references.bib
+++ b/report/sections/references.bib
@@ -8,3 +8,77 @@
    year={2019},
    month=may
 }
+
+@misc{fedgan,
+      title={FedGAN: Federated Generative Adversarial Networks for Distributed Data}, 
+      author={Mohammad Rasouli and Tao Sun and Ram Rajagopal},
+      year={2020},
+      eprint={2006.07228},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
+
+@misc{goodfellow2014generative,
+      title={Generative Adversarial Networks}, 
+      author={Ian J. Goodfellow and Jean Pouget-Abadie and Mehdi Mirza and Bing Xu and David Warde-Farley and Sherjil Ozair and Aaron Courville and Yoshua Bengio},
+      year={2014},
+      eprint={1406.2661},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML}
+}
+
+@inproceedings{liu2015faceattributes,
+  title = {Deep Learning Face Attributes in the Wild},
+  author = {Liu, Ziwei and Luo, Ping and Wang, Xiaogang and Tang, Xiaoou},
+  booktitle = {Proceedings of International Conference on Computer Vision (ICCV)},
+  month = {December},
+  year = {2015} 
+}
+
+@misc{bou2023torchrl,
+      title={TorchRL: A data-driven decision-making library for PyTorch}, 
+      author={Albert Bou and Matteo Bettini and Sebastian Dittert and Vikash Kumar and Shagun Sodhani and Xiaomeng Yang and Gianni De Fabritiis and Vincent Moens},
+      year={2023},
+      eprint={2306.00577},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
+
+@article{,
+title= {CIFAR-10 (Canadian Institute for Advanced Research)},
+journal= {},
+author= {Alex Krizhevsky and Vinod Nair and Geoffrey Hinton},
+year= {},
+url= {http://www.cs.toronto.edu/~kriz/cifar.html},
+abstract= {The CIFAR-10 dataset consists of 60000 32x32 colour images in 10 classes, with 6000 images per class. There are 50000 training images and 10000 test images. 
+
+The dataset is divided into five training batches and one test batch, each with 10000 images. The test batch contains exactly 1000 randomly-selected images from each class. The training batches contain the remaining images in random order, but some training batches may contain more images from one class than another. Between them, the training batches contain exactly 5000 images from each class. },
+keywords= {Dataset},
+terms= {}
+}
+
+@article{lecun2010mnist,
+  title={MNIST handwritten digit database},
+  author={LeCun, Yann and Cortes, Corinna and Burges, CJ},
+  journal={ATT Labs [Online]. Available: http://yann.lecun.com/exdb/mnist},
+  volume={2},
+  year={2010}
+}
+
+@book{james2023introduction,
+  title={An Introduction to Statistical Learning: With Applications in Python},
+  author={James, G. and Witten, D. and Hastie, T. and Tibshirani, R. and Taylor, J.},
+  isbn={9783031387487},
+  url={https://books.google.ch/books?id=0Zcv0AEACAAJ},
+  year={2023},
+  publisher={Springer International Publishing}
+}
+
+@article{Winter2018,
+  author = {Winter, Robin and Montanari, Floriane and Noé, Frank and Clevert, Djork-Arné},
+  title = {Learning Continuous and Data-Driven Molecular Descriptors by Translating Equivalent Chemical Representations},
+  journal = {ChemRxiv},
+  year = {2018},
+  doi = {10.26434/chemrxiv.6871628.v1},
+  note = {This content is a preprint and has not been peer-reviewed}
+}
