--- a/report/sections/results.tex
+++ b/report/sections/results.tex
@@ -1,1 +1,9 @@
 \chapter{Results}
+\section{Mean time elapsed}
+In this experiment we use the elapsed time for every operations that are performed during an epoch. By averaging the time it takes for every operation we can generating the following plots for all the actors and world-sizes.
+
+\begin{itemize}
+    \item \textit{What, precisely, is your contribution?}
+    \item \textit{What is your new result?}
+    \item \textit{Why should the reader believe your result?}
+\end{itemize}
