--- a/results/plot_logs.ipynb
+++ b/results/plot_logs.ipynb
@@ -22,7 +22,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "logs_path = Path(\"logs\")"
+    "logs_path = Path(\"logs\")\n",
+    "img_path = Path(\"..\", \"report\", \"images\")"
    ]
   },
   {
@@ -325,8 +326,27 @@
    "source": [
     "px.line(standalone_df, x=\"epoch\", y=[\"Discriminator Loss\", \"Generator Loss\"], title=\"Losses standalone\", labels=labels, width=WIDTH, height=HEIGHT).show()\n",
     "px.line(all_df, x=\"epoch\", y=[\"Discriminator Loss\"], color=\"log\", title=\"Losses discriminators\", labels=labels, width=WIDTH, height=HEIGHT).show()\n",
-    "px.line(all_df[[\"epoch\", \"log\", \"fid\"]].dropna(), x=\"epoch\", y=\"fid\", color=\"log\", title=\"Fréchet Inception Distance\", labels=labels, width=WIDTH, height=HEIGHT).show()\n",
-    "px.line(all_df[[\"epoch\", \"log\", \"is\"]].dropna(), x=\"epoch\", y=\"is\", color=\"log\", title=\"Inception Score\", labels=labels, width=WIDTH, height=HEIGHT).show()"
+    "\n",
+    "selected_log = [\n",
+    "    \"Standalone (CIFAR10)\",\n",
+    "    \"Server (CIFAR10, 4)\",\n",
+    "    \"Server (CIFAR10, 10)\",\n",
+    "]\n",
+    "fid_df = all_df[[\"epoch\", \"log\", \"fid\"]].dropna()\n",
+    "fid_df = fid_df[fid_df[\"log\"].isin(selected_log)]\n",
+    "# fid_df = fid_df[fid_df[\"epoch\"] <= 10000]\n",
+    "fid_df = fid_df[fid_df[\"epoch\"] % 900 == 0]\n",
+    "f = px.line(fid_df, x=\"epoch\", y=\"fid\", color=\"log\", title=\"Fréchet Inception Distance\", labels=labels, width=WIDTH, height=HEIGHT)\n",
+    "f.write_image(img_path / \"fid.png\")\n",
+    "f.show()\n",
+    "\n",
+    "is_df = all_df[[\"epoch\", \"log\", \"is\"]].dropna()\n",
+    "is_df = is_df[is_df[\"log\"].isin(selected_log)]\n",
+    "# is_df = is_df[is_df[\"epoch\"] <= 10000]\n",
+    "is_df = is_df[is_df[\"epoch\"] % 900 == 0]\n",
+    "f = px.line(is_df, x=\"epoch\", y=\"is\", color=\"log\", title=\"Inception Score\", labels=labels, width=WIDTH, height=HEIGHT)\n",
+    "f.write_image(img_path / \"is.png\")\n",
+    "f.show()"
    ]
   },
   {
@@ -366,12 +386,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "px.line(standalone_server_df, x=\"epoch\", y=\"time_elapsed.epoch_calculation\", color=\"log\", title=\"Epoch duration\", labels=labels, width=WIDTH, height=HEIGHT).show()\n",
-    "px.line(standalone_server_df, x=\"start.epoch\", y=\"epoch\", color=\"log\", title=\"Epoch start time\", labels=labels, width=WIDTH, height=HEIGHT).show()\n",
+    "f = px.line(standalone_server_df, x=\"epoch\", y=\"time_elapsed.epoch_calculation\", color=\"log\", title=\"Epoch duration\", labels=labels, width=WIDTH, height=HEIGHT)\n",
+    "f.write_image(img_path / \"epoch_duration.png\")\n",
+    "f.show()\n",
     "\n",
-    "px.line(standalone_df_without_outliers, x=\"epoch\", y=\"time_elapsed.epoch_calculation\", color=\"log\", title=\"Epoch duration (without outliers)\", labels=labels, width=WIDTH, height=HEIGHT).show()\n",
-    "px.bar(df_avg_time_per_epoch, x=\"Actor\", y=\"Average time per epoch\", title=\"Average time per epoch\", width=WIDTH, height=HEIGHT, text_auto=True, color=\"Actor\").show()\n",
-    "px.line(df_avg_time_per_epoch, x=\"Actor\", y=\"Average time per epoch\", title=\"Average time per epoch\", width=WIDTH, height=HEIGHT).show()"
+    "f = px.line(standalone_server_df, x=\"start.epoch\", y=\"epoch\", color=\"log\", title=\"Epoch start time\", labels=labels, width=WIDTH, height=HEIGHT)\n",
+    "f.write_image(img_path / \"epoch_start_time.png\")\n",
+    "f.show()\n",
+    "\n",
+    "standalone_server_df_cropped = standalone_server_df[standalone_server_df[\"epoch\"] <= 5000]\n",
+    "f = px.line(standalone_server_df_cropped, x=\"start.epoch\", y=\"epoch\", color=\"log\", title=\"Epoch start time\", labels=labels, width=WIDTH, height=HEIGHT)\n",
+    "f.write_image(img_path / \"epoch_start_time_cropped.png\")\n",
+    "f.show()\n",
+    "\n",
+    "f = px.line(standalone_df_without_outliers, x=\"epoch\", y=\"time_elapsed.epoch_calculation\", color=\"log\", title=\"Epoch duration (without outliers)\", labels=labels, width=WIDTH, height=HEIGHT)\n",
+    "f.write_image(img_path / \"epoch_duration_without_outliers.png\")\n",
+    "f.show()\n",
+    "\n",
+    "f = px.bar(df_avg_time_per_epoch, x=\"Actor\", y=\"Average time per epoch\", title=\"Average time per epoch\", width=WIDTH, height=HEIGHT, text_auto=True, color=\"Actor\")\n",
+    "f.write_image(img_path / \"average_time_per_epoch.png\")\n",
+    "f.show()\n",
+    "\n",
+    "f = px.line(df_avg_time_per_epoch, x=\"Actor\", y=\"Average time per epoch\", title=\"Average time per epoch\", width=WIDTH, height=HEIGHT)\n",
+    "f.write_image(img_path / \"average_time_per_epoch_line.png\")\n",
+    "f.show()"
    ]
   },
   {
@@ -415,9 +453,14 @@
     "    mean_time_elapsed = df[[\"event\", \"time_elapsed\"]].groupby(\"event\").mean().sort_values(by=\"time_elapsed\").reset_index()\n",
     "    mean_time_elapsed = mean_time_elapsed[mean_time_elapsed[\"event\"].isin(selected_columns)].reset_index(drop=True)\n",
     "    mean_time_elapsed[\"event\"] = mean_time_elapsed[\"event\"].replace(rename_events)\n",
-    "    px.bar(mean_time_elapsed, x=\"event\", y=\"time_elapsed\", title=f\"Mean time elapsed {server}\", color=\"event\", labels=labels, width=WIDTH, height=HEIGHT, text_auto=True).show()\n",
-    "    px.pie(mean_time_elapsed, values=\"time_elapsed\", names=\"event\", title=f\"Mean time elapsed {server}\", labels=labels, width=WIDTH, height=HEIGHT).show()\n",
-    "    mean_time_elapsed"
+    "    \n",
+    "    f = px.bar(mean_time_elapsed, x=\"event\", y=\"time_elapsed\", title=f\"Mean time elapsed {server}\", color=\"event\", labels=labels, width=WIDTH, height=HEIGHT, text_auto=True)\n",
+    "    f.write_image(img_path / f\"mean_time_elapsed_bar_{server}.png\")\n",
+    "    f.show()\n",
+    "\n",
+    "    f = px.pie(mean_time_elapsed, values=\"time_elapsed\", names=\"event\", title=f\"Mean time elapsed {server}\", labels=labels, width=WIDTH, height=HEIGHT)\n",
+    "    f.write_image(img_path / f\"mean_time_elapsed_pie_{server}.png\")\n",
+    "    f.show()"
    ]
   },
   {
@@ -454,8 +497,15 @@
     "    mean_time_elapsed = df[[\"event\", \"time_elapsed\"]].groupby(\"event\").mean().sort_values(by=\"time_elapsed\").reset_index()\n",
     "    mean_time_elapsed = mean_time_elapsed[mean_time_elapsed[\"event\"].isin(selected_columns)].reset_index(drop=True)\n",
     "    mean_time_elapsed[\"event\"] = mean_time_elapsed[\"event\"].replace(rename_events)\n",
-    "    px.bar(mean_time_elapsed, x=\"event\", y=\"time_elapsed\", title=f\"Mean time elapsed workers ({dataset}, {world_size})\", color=\"event\", labels=labels, width=WIDTH, height=HEIGHT, text_auto=True).show()\n",
-    "    px.pie(mean_time_elapsed, values=\"time_elapsed\", names=\"event\", title=f\"Mean time elapsed workers ({dataset}, {world_size})\", labels=labels, width=WIDTH, height=HEIGHT).show()\n",
+    "\n",
+    "    f = px.bar(mean_time_elapsed, x=\"event\", y=\"time_elapsed\", title=f\"Mean time elapsed workers ({dataset}, {world_size})\", color=\"event\", labels=labels, width=WIDTH, height=HEIGHT, text_auto=True)\n",
+    "    f.write_image(img_path / f\"mean_time_elapsed_bar_workers_{dataset}_{world_size}.png\")\n",
+    "    f.show()\n",
+    "\n",
+    "    f = px.pie(mean_time_elapsed, values=\"time_elapsed\", names=\"event\", title=f\"Mean time elapsed workers ({dataset}, {world_size})\", labels=labels, width=WIDTH, height=HEIGHT)\n",
+    "    f.write_image(img_path / f\"mean_time_elapsed_bar_workers_{dataset}_{world_size}.png\")\n",
+    "    f.show()\n",
+    "    \n",
     "    display(mean_time_elapsed)"
    ]
   },
