--- a/results/plot_logs.ipynb
+++ b/results/plot_logs.ipynb
@@ -332,20 +332,28 @@
     "    \"Server (CIFAR10, 4)\",\n",
     "    \"Server (CIFAR10, 10)\",\n",
     "]\n",
+    "\n",
     "fid_df = all_df[[\"epoch\", \"log\", \"fid\"]].dropna()\n",
-    "fid_df = fid_df[fid_df[\"log\"].isin(selected_log)]\n",
-    "# fid_df = fid_df[fid_df[\"epoch\"] <= 10000]\n",
-    "fid_df = fid_df[fid_df[\"epoch\"] % 900 == 0]\n",
     "f = px.line(fid_df, x=\"epoch\", y=\"fid\", color=\"log\", title=\"Fréchet Inception Distance\", labels=labels, width=WIDTH, height=HEIGHT)\n",
     "f.write_image(img_path / \"fid.png\")\n",
     "f.show()\n",
     "\n",
+    "fid_df = fid_df[fid_df[\"log\"].isin(selected_log)]\n",
+    "fid_df = fid_df[fid_df[\"epoch\"] % 900 == 0]\n",
+    "f = px.line(fid_df, x=\"epoch\", y=\"fid\", color=\"log\", title=\"Fréchet Inception Distance\", labels=labels, width=WIDTH, height=HEIGHT)\n",
+    "f.write_image(img_path / \"fid_filtered.png\")\n",
+    "f.show()\n",
+    "\n",
+    "\n",
     "is_df = all_df[[\"epoch\", \"log\", \"is\"]].dropna()\n",
-    "is_df = is_df[is_df[\"log\"].isin(selected_log)]\n",
-    "# is_df = is_df[is_df[\"epoch\"] <= 10000]\n",
-    "is_df = is_df[is_df[\"epoch\"] % 900 == 0]\n",
     "f = px.line(is_df, x=\"epoch\", y=\"is\", color=\"log\", title=\"Inception Score\", labels=labels, width=WIDTH, height=HEIGHT)\n",
     "f.write_image(img_path / \"is.png\")\n",
+    "f.show()\n",
+    "\n",
+    "is_df = is_df[is_df[\"log\"].isin(selected_log)]\n",
+    "is_df = is_df[is_df[\"epoch\"] % 900 == 0]\n",
+    "f = px.line(is_df, x=\"epoch\", y=\"is\", color=\"log\", title=\"Inception Score\", labels=labels, width=WIDTH, height=HEIGHT)\n",
+    "f.write_image(img_path / \"is_filtered.png\")\n",
     "f.show()"
    ]
   },
