--- a/results/plot_logs.ipynb
+++ b/results/plot_logs.ipynb
@@ -124,7 +124,7 @@
     "        print(log)\n",
     "        df = pd.read_csv(f)\n",
     "        name = convert_name_to_human_friendly(log.stem)\n",
-    "        df[\"dataset\"] = f\"{dataset}.{world_size}\"\n",
+    "        df[\"dataset\"] = f\"{dataset} ({world_size})\"\n",
     "        df[\"worker\"] = worker\n",
     "        df[\"log\"] = name\n",
     "        df[\"world_size\"] = world_size\n",
@@ -159,7 +159,7 @@
     "    with open(log) as f:\n",
     "        df = pd.read_csv(f)\n",
     "        name = convert_name_to_human_friendly(log.stem)\n",
-    "        df[\"dataset\"] = f\"{dataset}.{world_size}\"\n",
+    "        df[\"dataset\"] = f\"{dataset} ({world_size})\"\n",
     "        df[\"world_size\"] = world_size\n",
     "        df[\"log\"] = name\n",
     "        df = convert_all_pairs_to_datetime(df)\n",
@@ -412,21 +412,12 @@
     "f.show()\n",
     "\n",
     "f = px.bar(df_avg_time_per_epoch, x=\"Actor\", y=\"Average time per epoch\", title=\"Average time per epoch\", width=WIDTH, height=HEIGHT, text_auto=True, color=\"Actor\")\n",
+    "f2 = px.line(df_avg_time_per_epoch, x=\"Actor\", y=\"Average time per epoch\", title=\"Average time per epoch\", width=WIDTH, height=HEIGHT, markers=True)\n",
+    "#set opacity to 0.5\n",
+    "f2.data[0].update(opacity=0.5)\n",
+    "f.add_trace(f2.data[0])\n",
     "f.write_image(img_path / \"average_time_per_epoch.png\")\n",
-    "f.show()\n",
-    "\n",
-    "f = px.line(df_avg_time_per_epoch, x=\"Actor\", y=\"Average time per epoch\", title=\"Average time per epoch\", width=WIDTH, height=HEIGHT)\n",
-    "f.write_image(img_path / \"average_time_per_epoch_line.png\")\n",
     "f.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "server_events_df"
    ]
   },
   {
@@ -468,7 +459,14 @@
     "\n",
     "    f = px.pie(mean_time_elapsed, values=\"time_elapsed\", names=\"event\", title=f\"Mean time elapsed {server}\", labels=labels, width=WIDTH, height=HEIGHT)\n",
     "    f.write_image(img_path / f\"mean_time_elapsed_pie_{server}.png\")\n",
-    "    f.show()"
+    "    f.show()\n",
+    "\n",
+    "mean_time_elapsed = server_events_df[[\"event\", \"dataset\", \"time_elapsed\"]].groupby([\"event\", \"dataset\"]).mean().sort_values(by=\"time_elapsed\").reset_index()\n",
+    "mean_time_elapsed = mean_time_elapsed[mean_time_elapsed[\"event\"].isin(selected_columns)].reset_index(drop=True)\n",
+    "mean_time_elapsed[\"event\"] = mean_time_elapsed[\"event\"].replace(rename_events)\n",
+    "f = px.bar(mean_time_elapsed, x=\"event\", y=\"time_elapsed\", color=\"dataset\", title=\"Mean time elapsed per operations (Server)\", labels=labels, width=WIDTH, height=HEIGHT, text_auto=True)\n",
+    "f.write_image(img_path / \"mean_time_elapsed_bar_server.png\")\n",
+    "f.show()"
    ]
   },
   {
@@ -500,7 +498,8 @@
     "    \"event\": \"Event\",\n",
     "}\n",
     "for worker in workers_events_df[\"dataset\"].unique():\n",
-    "    dataset, world_size = worker.split(\".\")\n",
+    "    dataset, world_size = worker.split(\" \")\n",
+    "    world_size = int(world_size.replace(\"(\", \"\").replace(\")\", \"\"))\n",
     "    df = workers_events_df[workers_events_df[\"dataset\"] == worker]\n",
     "    mean_time_elapsed = df[[\"event\", \"time_elapsed\"]].groupby(\"event\").mean().sort_values(by=\"time_elapsed\").reset_index()\n",
     "    mean_time_elapsed = mean_time_elapsed[mean_time_elapsed[\"event\"].isin(selected_columns)].reset_index(drop=True)\n",
@@ -514,7 +513,14 @@
     "    f.write_image(img_path / f\"mean_time_elapsed_bar_workers_{dataset}_{world_size}.png\")\n",
     "    f.show()\n",
     "    \n",
-    "    display(mean_time_elapsed)"
+    "    display(mean_time_elapsed)\n",
+    "\n",
+    "mean_time_elapsed = workers_events_df[[\"event\", \"dataset\", \"time_elapsed\"]].groupby([\"event\", \"dataset\"]).mean().sort_values(by=\"time_elapsed\").reset_index()\n",
+    "mean_time_elapsed = mean_time_elapsed[mean_time_elapsed[\"event\"].isin(selected_columns)].reset_index(drop=True)\n",
+    "mean_time_elapsed[\"event\"] = mean_time_elapsed[\"event\"].replace(rename_events)\n",
+    "f = px.bar(mean_time_elapsed, x=\"event\", y=\"time_elapsed\", title=f\"Mean time elapsed per operations (Workers)\", color=\"dataset\", labels=labels, width=WIDTH, height=HEIGHT, text_auto=True)\n",
+    "f.write_image(img_path / f\"mean_time_elapsed_bar_workers.png\")\n",
+    "f.show()"
    ]
   },
   {
@@ -523,50 +529,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# MAX_EPOCHS = 10\n",
-    "# events = [\n",
-    "#     \"generate_data\",\n",
-    "#     \"send_data\",\n",
-    "#     \"recv_data\",\n",
-    "#     \"calc_gradients\",\n",
-    "#     \"apply_gradients\",\n",
-    "#     \"swap\",\n",
-    "#     \"fid\",\n",
-    "#     \"is\",\n",
-    "#     \"send\",\n",
-    "#     \"generator_train\",\n",
-    "#     \"discriminator_train\",\n",
-    "# ]\n",
-    "# rename_events = {\n",
-    "#     \"generate_data\": \"(Standalone/Server) Generate data\",\n",
-    "#     \"send_data\": \"(Server) Send data to workers\",\n",
-    "#     \"recv_data\": \"(Server/Worker) Receive feedbacks/data from workers/server\",\n",
-    "#     \"apply_gradients\": \"(Server) Perform optimization step\",\n",
-    "#     \"swap\": \"Send swap instruction to workers\",\n",
-    "#     \"calc_gradients\": \"(Standalone/Worker) Perform optimization step / (Server) Aggregate gradients\",\n",
-    "#     \"send\": \"(Worker) Send gradients to server\",\n",
-    "#     \"fid\": \"(Standalone/Server) Calculate FID\",\n",
-    "#     \"is\": \"(Standalone/Server) Calculate IS\",\n",
-    "# }\n",
-    "# labels = {\n",
-    "#     \"event\": \"Event\",\n",
-    "# }\n",
-    "# all_events_df_timeline = all_events_df[all_events_df[\"event\"].isin(events)].copy()\n",
-    "# all_events_df_timeline[\"event\"] = all_events_df_timeline[\"event\"].replace(rename_events)\n",
+    "MAX_EPOCHS = 10\n",
+    "events = [\n",
+    "    \"generate_data\",\n",
+    "    \"send_data\",\n",
+    "    \"recv_data\",\n",
+    "    \"calc_gradients\",\n",
+    "    \"apply_gradients\",\n",
+    "    \"swap\",\n",
+    "    \"fid\",\n",
+    "    \"is\",\n",
+    "    \"send\",\n",
+    "]\n",
+    "rename_events = {\n",
+    "    \"generate_data\": \"(Standalone/Server) Generate data\",\n",
+    "    \"send_data\": \"(Server) Send data to workers\",\n",
+    "    \"recv_data\": \"(Server/Worker) Receive feedbacks/data from workers/server\",\n",
+    "    \"apply_gradients\": \"(Server) Perform optimization step\",\n",
+    "    \"swap\": \"Send swap instruction to workers\",\n",
+    "    \"calc_gradients\": \"(Standalone/Worker) Perform optimization step / (Server) Aggregate gradients\",\n",
+    "    \"send\": \"(Worker) Send gradients to server\",\n",
+    "    \"fid\": \"(Standalone/Server) Calculate FID\",\n",
+    "    \"is\": \"(Standalone/Server) Calculate IS\",\n",
+    "}\n",
+    "labels = {\n",
+    "    \"event\": \"Event\",\n",
+    "}\n",
+    "selected_dataset = \"CIFAR10 (4)\"\n",
+    "all_events_df_timeline = all_events_df[all_events_df[\"event\"].isin(events)].copy()\n",
+    "all_events_df_timeline[\"event\"] = all_events_df_timeline[\"event\"].replace(rename_events)\n",
+    "all_events_df_timeline = all_events_df_timeline[all_events_df_timeline[\"dataset\"] == selected_dataset]\n",
     "\n",
-    "# timeline_start = px.timeline(\n",
-    "#     all_events_df_timeline[all_events_df_timeline[\"index\"] < MAX_EPOCHS],\n",
-    "#     x_start=\"start\",\n",
-    "#     x_end=\"end\",\n",
-    "#     color=\"legend\",\n",
-    "#     y=\"event\",\n",
-    "#     opacity=0.5,\n",
-    "#     template=\"plotly_white\",\n",
-    "#     labels=labels,\n",
-    "#     width=WIDTH,\n",
-    "#     height=HEIGHT,\n",
-    "# )\n",
-    "# timeline_start.show()"
+    "timeline_start = px.timeline(\n",
+    "    all_events_df_timeline[all_events_df_timeline[\"index\"] < MAX_EPOCHS],\n",
+    "    x_start=\"start\",\n",
+    "    x_end=\"end\",\n",
+    "    color=\"legend\",\n",
+    "    y=\"event\",\n",
+    "    opacity=0.5,\n",
+    "    template=\"plotly_white\",\n",
+    "    labels=labels,\n",
+    "    width=WIDTH*2,\n",
+    "    height=HEIGHT,\n",
+    "    title=f\"Timeline of events for {selected_dataset} - first {MAX_EPOCHS} epochs\"\n",
+    ")\n",
+    "timeline_start.update_layout(showlegend=False)\n",
+    "timeline_start.write_image(img_path / \"timeline.png\")\n",
+    "timeline_start.show()"
    ]
   }
  ],
